tests/checker/fail/unknown_receiver_type.can
Described = (Mystery) => String {
    "hello"
}

Unit => Program {
    "x" -> Described
    "ok" -> Print
}
